Added menu, Json API Response trait added, new fetch roles api.
