# php/BookMyShow/routes/api.php
@@ -2,6 +2,7 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\RoleController;
 
 Route::prefix('v1')->group(function () {
     // Public routes
@@ -10,7 +11,9 @@ Route::prefix('v1')->group(function () {
 
     // Protected routes
     Route::middleware('auth:sanctum')->group(function () {
-        Route::post('/authorize', [AuthController::class, 'authorize']);
         Route::post('/logout', [AuthController::class, 'logout']);
+        Route::post('/authorize', [AuthController::class, 'authorize']);
+        Route::get('/user-permissions', [AuthController::class, 'getUserPermissions']);
+        Route::get('/roles', [RoleController::class, 'getRoles']);
     });
 });
